Added key functionality. IT WORKS!!!